[package]
name = "hip-sys"
version = "0.1.1"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hip-runtime-sys = { path = "hip-runtime-sys" }
hipblas-sys = { path = "hipblas-sys" }
