[package]
name = "hip-runtime-sys"
version = "0.1.0"
authors = ["charles-r-earp <charles.r.earp@gmail.com>"]
edition = "2018"
links = "hip_hcc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.73"

[build-dependencies]
bindgen = { version = "0.54.1", optional = true }
